fix: docs scrollbar (#539)

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -93,7 +93,7 @@
 
 /* Top nav items */
 
-div .menu {
+.nav.menu {
   overflow: initial;
 }
 
